# WildMagic

./: .env.example  .env.example.lowcpu  .env.example.minimalcpu  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml
.claude/: settings.json
docs/: AESTHETICS_AND_TONE.md  AGENT_PLAYTESTING.md  ARCHITECTURE.md  AUTOPLAY_PLAN.md  CAPABILITY_CARD_PLAN.md  CAPABILITY_ROUTING.md  CHARACTER_CREATION.md  CODE_REVIEW_GRAPH.md  CONTENT_FLESHING_ROADMAP.md  EMERGENT_QUESTS.md  EMERGENT_WORLD_CONTENT_PLAN.md  EMERGENT_WORLD_PLAYTEST_PLAN.md  EMERGENT_WORLD_STRATEGY.md  ENTITY_UNIFICATION.md  EXECUTION_PLAN.md  FACTION_KILL_REPUTATION.md  GOSSIP_GRAPH_STRATEGY.md  HYBRID_GENERATION.md  LORE_CARDS.md  MODEL_CONFIG.md  QWEN_SKILL_ARCHITECTURE_PLAN.md  SEMANTIC_EFFECTS.md  SPELL_COMPENDIUM.md  SPELL_FOCUS_PLAN.md  UNSUPPORTED_SPELL_MECHANICS_PLAN.md  WILD_MAGIC_SCHEMA.md  WILD_MAGIC_STATE_SURFACE_PLAN.md  WORLDBUILDING.md  WORLD_GENERATION.md  WORLD_PROMISES.md  WORLD_PROMISES_NOTES_TO_CLAUDE.md  implementation_session_log.md
tests/: conftest.py  promise_golden_cases.py  test_auras.py  test_autoplay.py  test_behavior_control.py  test_bonds_and_followers.py  test_canon_json.py  test_capability_routing.py  test_character.py  test_combat_stance.py  test_concerns.py  test_condition_triggers.py  test_config.py  test_config_contract.py  test_curses.py  test_deeds_and_legend.py  test_delayed_effects.py  test_effect_transactions.py  test_emergent_phase0.py  test_entity_unification.py  test_exposure_model.py  test_file_lore_cards.py  (+30 more)
(+97 files in other folders)
