[project]
name = "wildmagic"
version = "0.1.0"
description = "A graphical ASCII roguelike about wild magic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14",
]

portraits = [
    "diffusers>=0.31",
    "transformers",
    "accelerate",
    "safetensors",
    "pillow",
    "huggingface-hub",
    "torchao",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "full: long-running or provider-sensitive tests skipped by the default trim suite",
]

[tool.ruff.lint]
ignore = [
    "E402",  # Existing module layout includes imports after provider helpers.
    "F401",  # Some imports intentionally preserve compatibility and mixin APIs.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
